--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 # build KalTest library
 
-SET( lib_input_dirs geomlib kallib kaltracklib utils )
+SET( lib_input_dirs geomlib kallib kaltracklib utils)
 
 FOREACH( lib_input_dir ${lib_input_dirs} )
     LIST( APPEND ROOT_DICT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/${lib_input_dir} )
@@ -28,14 +28,19 @@ ENDFOREACH()
 INCLUDE_DIRECTORIES( ${ROOT_DICT_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIRS} )
 
-#MESSAGE( STATUS "KalTest lib sources: ${lib_sources}" )
+########
+AUX_SOURCE_DIRECTORY( processors lib_sources)
+INCLUDE_DIRECTORIES( ${Marlin_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES( ${LCIO_INCLUDE_DIRS} ) 
 
-ADD_SHARED_LIBRARY( KalTest ${lib_sources} )
-INSTALL_SHARED_LIBRARY( KalTest DESTINATION lib )
-TARGET_LINK_LIBRARIES( KalTest ${ROOT_LIBRARIES} )
+#MESSAGE( STATUS "KalTest lib sources: ${calo_procesor_sources}" )
+
+ADD_SHARED_LIBRARY( KalTestCalo ${lib_sources} )
+INSTALL_SHARED_LIBRARY( KalTestCalo DESTINATION lib )
+TARGET_LINK_LIBRARIES( KalTestCalo ${ROOT_LIBRARIES} )
 
 IF( APPLE ) #---- need special linker flags for ROOT dictionary on MacOS
-    SET_TARGET_PROPERTIES( KalTest PROPERTIES
+    SET_TARGET_PROPERTIES( KalTestCalo PROPERTIES
         LINK_FLAGS "-single_module -undefined dynamic_lookup -bind_at_load"
     )
 ENDIF( APPLE )
